[project]
name = "quantum-crypto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "asttokens==3.0.1",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.5",
    "click==8.3.1",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "deprecated==1.3.1",
    "dill==0.4.1",
    "executing==2.2.1",
    "flask==2.2.5",
    "fonttools==4.62.0",
    "googleapis-common-protos==1.73.0",
    "grpcio==1.78.0",
    "idna==3.11",
    "importlib-metadata==8.4.0",
    "ipykernel==7.2.0",
    "ipython==9.10.0",
    "ipython-pygments-lexers==1.1.1",
    "iqm-client==33.0.4",
    "iqm-data-definitions==2.22",
    "iqm-exa-common==27.4.5",
    "iqm-pulse==12.7.5",
    "iqm-station-control-client==12.0.5",
    "itsdangerous==2.2.0",
    "jax==0.7.1",
    "jaxlib==0.7.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kiwisolver==1.5.0",
    "lagrangeclient==0.1.3",
    "llvmlite==0.46.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "ml-dtypes==0.5.4",
    "mpmath==1.3.0",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "numba==0.64.0",
    "numpy==2.4.3",
    "numpy-typing-compat==20251206.2.4",
    "opentelemetry-api==1.27.0",
    "opentelemetry-exporter-otlp==1.27.0",
    "opentelemetry-exporter-otlp-proto-common==1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.27.0",
    "opentelemetry-exporter-otlp-proto-http==1.27.0",
    "opentelemetry-proto==1.27.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-semantic-conventions==0.48b0",
    "opt-einsum==3.4.0",
    "optype==0.17.0",
    "packaging==24.1",
    "pandas==3.0.1",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "pillow==12.1.1",
    "platformdirs==4.9.4",
    "prompt-toolkit==3.0.52",
    "protobuf==4.25.8",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pylatexenc==2.10",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==0.21.1",
    "python-rapidjson==1.20",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "qiskit==2.1.2",
    "qiskit-aer==0.17.2",
    "qrisp==0.8.0",
    "requests==2.32.3",
    "ruamel-yaml==0.17.32",
    "ruamel-yaml-clib==0.2.8",
    "rustworkx==0.17.1",
    "scipy==1.17.1",
    "scipy-stubs==1.17.1.1",
    "six==1.16.0",
    "stack-data==0.6.3",
    "stevedore==5.7.0",
    "sympy==1.13.0",
    "tornado==6.5.5",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "types-protobuf==6.32.1.20260221",
    "types-requests==2.32.4.20260107",
    "types-six==1.17.0.20251009",
    "types-tqdm==4.67.3.20260303",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "waitress==3.0.2",
    "wcwidth==0.6.0",
    "werkzeug==3.1.6",
    "wrapt==2.1.2",
    "xarray==2026.2.0",
    "zipp==3.23.0",
]

[[tool.uv.index]]
url = "https://gitlab.linksfoundation.com/api/v4/projects/1709/packages/pypi/simple"
